syntax = "proto3";

service PingPong {
  // rpc SayPong (PingRequest) returns (PongReply) {}
  // rpc SayPing (PongRequest) returns (PingReply) {}
  // rpc Sum (NumberCollection) returns (NumberResponse) {}
  rpc CreateCode (CreateCodeRequest) returns (CodeResponse) {}
  rpc ShowCode (ShowCodeRequest) returns (ShowCodeResponse) {}
}

message ShowCodeRequest {
  string name = 1;
}

message ShowCodeResponse {
  int32 id = 1;
  string name = 2;
  int32 amount = 3;
}

message CreateCodeRequest {
  string name = 1;
  int32 amount = 2;
}

message CodeResponse {
  int32 id = 1;
  string status = 2;
}

message NumberCollection {
  repeated int32 numbers = 1;
}

message NumberResponse {
  int32 sum = 1;
}

message PingRequest {
  string sender_name = 1;
}

message PongRequest {
  string sender_name = 1;
}

message PongReply {
  string sender_name = 1;
}

message PingReply {
  string sender_name = 1;
}
